--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -148,7 +148,9 @@ img.person-image {
 
 #thesisBlock {}
 
-.personThesisEntry {}
+.personThesisEntry {
+	margin: 0 0 5px 0;
+}
 
 .personPdesc {
 	height: 14px;
