person page - only allows users to edit person details if the person is not claimed

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -123,7 +123,7 @@
 					<div class="form-group">
 						<h1>
 							<div class="personPageFormPlaceholder">
-								<c:if test="${not empty command.context.loginUser.name and not command.context.loginUser.spammer}">
+								<c:if test="${empty command.person.user or (not empty command.person.user and (command.person.user eq command.context.loginUser.name)) and not command.context.loginUser.spammer}">
 									<span class="personPageEnableForm fa fa-pencil"><!--  --></span>
 								</c:if>
 								<span class="personPageFormFieldContent" id="personPageFormAcademicDegreeValue">${command.person.academicDegree}</span>
@@ -169,7 +169,7 @@
 								
 								<div class="col-md-8">
 									<div class="personPageFormPlaceholder">
-										<c:if test="${not empty command.context.loginUser.name and not command.context.loginUser.spammer}">
+										<c:if test="${empty command.person.user or (not empty command.person.user and (command.person.user eq command.context.loginUser.name)) and not command.context.loginUser.spammer}">
 											<span class="personPageEnableForm fa fa-pencil"><!--  --></span> 
 										</c:if>
 										<span class="personPageFormFieldContent" id="personPageFormCollegeValue">${command.person.college}</span> 
@@ -306,7 +306,7 @@
 							
 							<div class="col-md-6">
 								<div class="personPageFormPlaceholder">
-									<c:if test="${not empty command.context.loginUser.name and not command.context.loginUser.spammer}">
+									<c:if test="${empty command.person.user or (not empty command.person.user and (command.person.user eq command.context.loginUser.name)) and not command.context.loginUser.spammer}">
 										<span class="personPageEnableForm fa fa-pencil"><!--  --></span> 
 									</c:if>
 									<span class="personPageFormFieldContent" id="personPageFormOrcidValue">${command.person.orcid}</span> 
