--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -319,7 +319,7 @@
 								
 								<!-- TODO: REMOVE INLINE CSS -->
 								<div style="margin:12px 0 0 10px; padding: 0 0 0 0 important;" class="personPageFormField col-md-2">
-									<actionbuttons:personPageupdateButton person="${command.person}" loginUser="${command.context.loginUser}" text="${textSaveButton}" operation="UPDATE_ORCID"></actionbuttons:personPageupdateButton>
+									<actionbuttons:personPageupdateButton person="${command.person}" loginUser="${command.context.loginUser}" text="${textSaveButton}" operation="UPDATE_ORCID" disabled="true"></actionbuttons:personPageupdateButton>
 								</div>
 							</div>
 						</div>
